--- a/indicators/templates/site_summary/indicators.html
+++ b/indicators/templates/site_summary/indicators.html
@@ -1,7 +1,7 @@
 {% load i18n wagtailadmin_tags %}
 
 <li>
-    <span class="icon icon-fa-bar-chart"></span>
+    {% icon name="kausal-indicator" %}
     <a href="{% url 'indicators_indicator_modeladmin_index' %}">
     {% blocktrans count counter=total_indicators with total_indicators|intcomma as total %}
         <span>{{ total }}</span> indicator <span class="visuallyhidden">monitored in {{ plan.name }}</span>
