Fix icons in basic OrganizationAdmin
This is only used when KWE is not present.

Frankly the styling sucks.

--- a/orgs/templates/orgs/node_list_header.html
+++ b/orgs/templates/orgs/node_list_header.html
@@ -1,9 +1,11 @@
+{% load wagtailadmin_tags %}
+
 {% if is_root %}
   <span style="font-size:135%;"><strong>{{ name }}</strong></span>
 {% else %}
   <span style="font-size:{% if depth is 1 %}120{% elif depth is 2 %}110{% else %}100{% endif %}%;">
     <span class="inline-block" style="margin-left:{{ depth_minus_1 }}em"></span>
-    <i class="icon icon-fa-level-up icon-fa-rotate-90" style="display: inline-block;"></i>
+    {% icon name="arrow-right" classname="default" %}
     {{ name }}
   </span>
 {% endif %}
