Capitalize the first letter of plan fields in branding title

--- a/admin_site/templates/wagtailadmin/base.html
+++ b/admin_site/templates/wagtailadmin/base.html
@@ -5,11 +5,12 @@
 
 {% block branding_title %}
     {% if active_plan.short_name %}
-        {{ active_plan.short_name }} - {% trans "Administration" %}
+        {{ active_plan.short_name|title }} - {% trans "Administration" %}
     {% else %}
-        {{ active_plan.name }} - {% trans "Administration" %}
+        {{ active_plan.name|title }} - {% trans "Administration" %}
     {% endif %}
 {% endblock %}
+
 
 {% block branding_logo %}
     {% if active_client and active_client.logo %}
