Fix weird inline-block CSS issues on, e.g., category list

--- a/admin_site/static/css/admin-styles.css
+++ b/admin_site/static/css/admin-styles.css
@@ -121,3 +121,7 @@ section[role="tabpanel"] .help-block {
 .listing .actions > li {
   margin: 0 0 .5em;
 }
+/* Fix weird inline block issues on, e.g., category list (unfiltered by category type) */
+.listing .title .title-wrapper, .listing .title h2 {
+  display: block;
+}
