Rename header for Own indicator panel

--- a/admin_site/templates/admin_site/own_indicators_panel.html
+++ b/admin_site/templates/admin_site/own_indicators_panel.html
@@ -2,7 +2,7 @@
 {% if own_indicators %}
 <div class="panel nice-padding">
     <section>
-        <h2>{% trans "Own indicators" %}</h2>
+        <h2>{% trans "Indicators assigned to me" %}</h2>
         <table class="listing listing-page">
             <col />
             <col width="15%"/>
