Typing, improved logging, kinder url path and other improvements for impersonation

--- a/admin_site/templates/admin_site/release_impersonation.html
+++ b/admin_site/templates/admin_site/release_impersonation.html
@@ -1,13 +1,14 @@
+{% load i18n %}
 <script>
-    $(document).ready(function() {{
+    $(document).ready(function() {
         $('.sidebar').append(
-            '<div class="release-impersonation">' +
-            '<form method="POST" action="{% url 'hijack:release' %}"">' +
-            '{% csrf_token %}' +
-            '<button type="submit" class="button bicolor icon icon-warning">Back to own User</button>' +
-            '<input type="hidden" name="next" value="{{ request.path }}">' +
-            '</form>' +
-            '</div>'
+            `<div class="release-impersonation">
+                <form method="POST" action="{% url 'hijack:release' %}">
+                    {% csrf_token %}
+                    <button type="submit" class="button bicolor icon icon-warning">{% trans 'Back to own User' %}</button>
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                </form>
+            </div>`
         );
-    }});
+    });
 </script>
