Hide impersonation button when target user has no site access

--- a/admin_site/templates/admin_site/release_impersonation.html
+++ b/admin_site/templates/admin_site/release_impersonation.html
@@ -5,7 +5,7 @@
             `<div class="release-impersonation">
                 <form method="POST" action="{% url 'hijack:release' %}">
                     {% csrf_token %}
-                    <button type="submit" class="button bicolor icon icon-warning">{% trans 'Back to own User' %}</button>
+                    <button type="submit" class="button bicolor icon icon-warning">{% trans 'Back to own user' %}</button>
                     <input type="hidden" name="next" value="{{ request.path }}">
                 </form>
             </div>`
